--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
         </div>
         <div id="content-bottom">
           <div class="slider slider1">
-            <img src="/assets/img/slider-bt1.jpg" alt="">
+            <img src="/assets/img/slider-bt1.jpg" alt="" />
           </div>
           <div class="slider slider2">
-            <img src="/assets/img/slider-bt2.jpg" alt="">
+            <img src="/assets/img/slider-bt2.jpg" alt="" />
           </div>
           <div class="slider slider3">
-            <img src="/assets/img/slider-bt3.jpg" alt="">
+            <img src="/assets/img/slider-bt3.jpg" alt="" />
           </div>
         </div>
       </div>
