--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="/assets/img/logo.png"
+      style="border-radius: 50%"
+    />
     <script src="/main.js"></script>
-    <title>Document</title>
+    <title>WEBSHOP | HUYLK</title>
   </head>
   <body>
     <div id="container">
